--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
 </head>
 <body>
     <!-- Header section -->
-    <header>
+    <section id="top-banner">
     <div class="container">
-    
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <button class="navbar-toggler mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">01.HISTORY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">02.TEAM</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     </div>
-    </header>
+    </section>
     <main>
         
     </main>
